Fill form width overflow possible fix pt.2

--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -1,4 +1,5 @@
 .fill-form {
+  
   form {
     padding: 0 20px;
     margin-bottom: 50px;
@@ -39,7 +40,6 @@
     fieldset {
       border: none;
       margin-top: 50px;
-      max-width: 100%;
 
       legend {
         font-size: 20px;
